--- a/language.html
+++ b/language.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2019-01-01 周二 20:03 -->
+<!-- 2019-01-01 周二 20:31 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>外语学习</title>
@@ -490,7 +490,6 @@ for the JavaScript code in this tag.
 <li>thin film:超薄薄膜，堆积在原片表面的用于传导或绝缘的一层特殊薄膜。</li>
 <li>titanium(Ti): 钛。</li>
 <li>toluene(C6H5CH3): 甲苯。有毒、无色易燃的液体，它不溶于水但溶于酒精和大气。</li>
-<li>1,1,1-trichloroethane(TCA)(CL3CCH3): 有毒、不易燃、有刺激性气味的液态溶剂。这种混合物不溶于水但溶于酒精和大气。</li>
 <li>tungsten(W): 钨。</li>
 <li>tungsten hexafluoride(WF6): 氟化钨。无色无味的气体或者是淡黄色液体。在CVD中WF6用于淀积硅化物，也可用于钨传导的薄膜。</li>
 <li>tinning: 金属性表面覆盖焊点的薄层。</li>
@@ -601,21 +600,21 @@ for the JavaScript code in this tag.
 <li>Carry bit: 进位位</li>
 <li>Carry-in bit: 进位输入</li>
 <li>Carry-out bit: 进位输出</li>
-<li>Cascade 级联</li>
-<li>Case 管壳</li>
-<li>Cathode 阴极</li>
-<li>Center 中心</li>
-<li>Ceramic 陶瓷（的）</li>
-<li>Channel 沟道</li>
-<li>Channel breakdown 沟道击穿</li>
-<li>Channel current 沟道电流</li>
-<li>Channel doping 沟道掺杂</li>
-<li>Channel shortening 沟道缩短</li>
-<li>Channel width 沟道宽度</li>
-<li>Characteristic impedance 特征阻抗</li>
-<li>Charge 电荷、充电</li>
-<li>Charge-compensation effects 电荷补偿效应</li>
-<li>Charge conservation 电荷守恒</li>
+<li>Cascade: 级联</li>
+<li>Case: 管壳</li>
+<li>Cathode: 阴极</li>
+<li>Center: 中心</li>
+<li>Ceramic： 陶瓷（的）</li>
+<li>Channel： 沟道</li>
+<li>Channel breakdown： 沟道击穿</li>
+<li>Channel current: 沟道电流</li>
+<li>Channel doping: 沟道掺杂</li>
+<li>Channel shortening: 沟道缩短</li>
+<li>Channel width: 沟道宽度</li>
+<li>Characteristic impedance: 特征阻抗</li>
+<li>Charge: 电荷、充电</li>
+<li>Charge-compensation effects: 电荷补偿效应</li>
+<li>Charge conservation: 电荷守恒</li>
 <li>Charge neutrality condition 电中性条件</li>
 <li>Charge drive/exchange/sharing/transfer/storage 电荷驱动/交换/共享/转移/存储</li>
 <li>Chemmical etching 化学腐蚀法</li>
@@ -1242,7 +1241,7 @@ for the JavaScript code in this tag.
 <li>Worst-case device 最坏情况器件</li>
 <li>Yield 成品率</li>
 <li>Zener breakdown 齐纳击穿</li>
-<li>Zone melting 区熔法</li>
+<li>Zone melting: 区熔法</li>
 </ul>
 </div>
 </div>
@@ -1423,7 +1422,7 @@ for the JavaScript code in this tag.
 <div id="postamble" class="status">
 <p class="author">Author: 比克曼</p>
 <p class="email">Email: <a href="mailto:bitman@163.com">bitman@163.com</a></p>
-<p class="date">Created: 2019-01-01 周二 20:03</p>
+<p class="date">Created: 2019-01-01 周二 20:31</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
