更新org文档头

--- a/decoration.html
+++ b/decoration.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2019-01-01 周二 18:25 -->
+<!-- 2019-01-01 周二 22:14 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>装修日记</title>
@@ -288,6 +288,16 @@ for the JavaScript code in this tag.
 </li>
 </ul>
 </li>
+</ul>
+</div>
+</div>
+<div id="list-of-tables">
+<h2>List of Tables</h2>
+<div id="text-list-of-tables">
+<ul>
+<li><a href="#org5e5e5b4"><span class="table-number">Table 1:</span> 设计师收费方式</a></li>
+<li><a href="#orgfd5233b"><span class="table-number">Table 2:</span> 工程进度表</a></li>
+<li><a href="#org32167fe"><span class="table-number">Table 3:</span> 单位换算</a></li>
 </ul>
 </div>
 </div>
@@ -1398,7 +1408,7 @@ for the JavaScript code in this tag.
 <div id="postamble" class="status">
 <p class="author">Author: 比克曼</p>
 <p class="email">Email: <a href="mailto:bitman@163.com">bitman@163.com</a></p>
-<p class="date">Created: 2019-01-01 周二 18:25</p>
+<p class="date">Created: 2019-01-01 周二 22:14</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
