--- a/encyclopedia.html
+++ b/encyclopedia.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2019-01-01 周二 18:25 -->
+<!-- 2019-01-01 周二 22:14 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>百科知识</title>
@@ -316,6 +316,14 @@ for the JavaScript code in this tag.
 <li><a href="#orge5cc954">2.1. 基本概念</a></li>
 </ul>
 </li>
+</ul>
+</div>
+</div>
+<div id="list-of-tables">
+<h2>List of Tables</h2>
+<div id="text-list-of-tables">
+<ul>
+<li><a href="#org27cb130"><span class="table-number">Table 1:</span> 导航电文内容</a></li>
 </ul>
 </div>
 </div>
@@ -906,7 +914,7 @@ Distance = R*Arccos(C) = 6371.004*Arccos(C) kilometer = 0.621371192*6371.004*Arc
 <div id="postamble" class="status">
 <p class="author">Author: 比克曼</p>
 <p class="email">Email: <a href="mailto:bitman@163.com">bitman@163.com</a></p>
-<p class="date">Created: 2019-01-01 周二 18:25</p>
+<p class="date">Created: 2019-01-01 周二 22:14</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
