--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2019-01-01 周二 20:25 -->
+<!-- 2019-01-01 周二 22:14 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>比克曼的知识管理</title>
@@ -230,7 +230,10 @@ for the JavaScript code in this tag.
 </head>
 <body>
 <div id="content">
-<h1 class="title">比克曼的知识管理</h1>
+<h1 class="title">比克曼的知识管理
+<br />
+<span class="subtitle">主页</span>
+</h1>
 <div id="table-of-contents">
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
@@ -250,6 +253,8 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
+
+
 
 <div id="outline-container-org8872438" class="outline-2">
 <h2 id="org8872438"><span class="section-number-2">1</span> <a href="./math.html">数学</a></h2>
@@ -351,7 +356,7 @@ for the JavaScript code in this tag.
 <div id="postamble" class="status">
 <p class="author">Author: 比克曼</p>
 <p class="email">Email: <a href="mailto:bitman@163.com">bitman@163.com</a></p>
-<p class="date">Created: 2019-01-01 周二 20:25</p>
+<p class="date">Created: 2019-01-01 周二 22:14</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
