--- a/os.html
+++ b/os.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2019-01-06 周日 13:36 -->
+<!-- 2019-02-23 周六 22:06 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>操作系统</title>
@@ -257,7 +257,7 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org60c4c4e">1. 基本概念</a>
+<li><a href="#org4ddd55d">1. brief</a>
 <ul>
 <li><a href="#org94ef11f">1.1. 进程</a></li>
 <li><a href="#orgc8e26b3">1.2. 线程</a></li>
@@ -356,7 +356,7 @@ for the JavaScript code in this tag.
 <li><a href="#org36df6ff">3.12.2. 使用方法</a></li>
 </ul>
 </li>
-<li><a href="#org8220841">3.13. hal</a>
+<li><a href="#org853a157">3.13. hal</a>
 <ul>
 <li><a href="#org08b3050">3.13.1. 架构</a></li>
 <li><a href="#orge90ce18">3.13.2. driver</a>
@@ -369,7 +369,7 @@ for the JavaScript code in this tag.
 <li><a href="#orge5bbab6">3.13.2.6. 驱动测试</a></li>
 </ul>
 </li>
-<li><a href="#orged72b79">3.13.3. hal</a>
+<li><a href="#org8220841">3.13.3. hal</a>
 <ul>
 <li><a href="#org05396f5">3.13.3.1. hal路径</a></li>
 <li><a href="#org16edaec">3.13.3.2. hal接口</a></li>
@@ -410,9 +410,8 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-
-<div id="outline-container-org60c4c4e" class="outline-2">
-<h2 id="org60c4c4e"><span class="section-number-2">1</span> 基本概念</h2>
+<div id="outline-container-org4ddd55d" class="outline-2">
+<h2 id="org4ddd55d"><span class="section-number-2">1</span> brief</h2>
 <div class="outline-text-2" id="text-1">
 </div>
 <div id="outline-container-org94ef11f" class="outline-3">
@@ -2370,8 +2369,8 @@ mBluetoothAdapter.closeProfileProxy(mBluetoothHeadset);
 </div>
 </div>
 </div>
-<div id="outline-container-org8220841" class="outline-3">
-<h3 id="org8220841"><span class="section-number-3">3.13</span> hal</h3>
+<div id="outline-container-org853a157" class="outline-3">
+<h3 id="org853a157"><span class="section-number-3">3.13</span> hal</h3>
 <div class="outline-text-3" id="text-3-13">
 <p>
 本小结主要参考<a href="https://blog.csdn.net/luoshengyang/article/details/6567257">CSDN</a>博客。
@@ -3039,8 +3038,8 @@ Makefile：执行编译命令make是用到的；
 </div>
 </div>
 </div>
-<div id="outline-container-orged72b79" class="outline-4">
-<h4 id="orged72b79"><span class="section-number-4">3.13.3</span> hal</h4>
+<div id="outline-container-org8220841" class="outline-4">
+<h4 id="org8220841"><span class="section-number-4">3.13.3</span> hal</h4>
 <div class="outline-text-4" id="text-3-13-3">
 <p>
 这里介绍Android系统如何在hal中增加硬件模块来和内核驱动程序交互。完成
@@ -3803,7 +3802,7 @@ svc调用，svc有相应的号；</li>
 <div id="postamble" class="status">
 <p class="author">Author: 比克曼</p>
 <p class="email">Email: <a href="mailto:bitman@163.com">bitman@163.com</a></p>
-<p class="date">Created: 2019-01-06 周日 13:36</p>
+<p class="date">Created: 2019-02-23 周六 22:06</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
