--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2019-01-06 周日 13:34 -->
+<!-- 2019-02-23 周六 22:06 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>比克曼的知识管理</title>
@@ -180,6 +180,7 @@
   .org-svg { width: 90%; }
   /*]]>*/-->
 </style>
+<link rel="stylesheet" type="text/css" href="css/org-manual.css"/>
 <script type="text/javascript">
 /*
 @licstart  The following is the entire license notice for the
@@ -237,114 +238,112 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orge784e9f">1. 数学</a></li>
-<li><a href="#org10bf1cd">2. 算法</a></li>
-<li><a href="#orgb5b3f25">3. 协议</a></li>
-<li><a href="#org6e5b915">4. 软件</a></li>
-<li><a href="#org6256cda">5. 硬件</a></li>
-<li><a href="#org2a1b448">6. 工具</a></li>
-<li><a href="#org5c95283">7. 信号系统</a></li>
-<li><a href="#org81ae0e3">8. 操作系统</a></li>
-<li><a href="#org57d6fc3">9. 通信</a></li>
-<li><a href="#orge29b85c">10. 百科知识</a></li>
-<li><a href="#org96f4fed">11. 外语</a></li>
-<li><a href="#org78aff8f">12. 装修</a></li>
+<li><a href="#org8872438">1. 数学</a></li>
+<li><a href="#org12e6fd9">2. 算法</a></li>
+<li><a href="#orgf2acd87">3. 协议</a></li>
+<li><a href="#org61c4b04">4. 软件</a></li>
+<li><a href="#orgc4a2f87">5. 硬件</a></li>
+<li><a href="#org2e45eb9">6. 工具</a></li>
+<li><a href="#org2dc8a7a">7. 信号系统</a></li>
+<li><a href="#org133f909">8. 操作系统</a></li>
+<li><a href="#orgec1b34b">9. 通信</a></li>
+<li><a href="#org108af46">10. 百科知识</a></li>
+<li><a href="#org0c79b39">11. 外语</a></li>
+<li><a href="#orgada2220">12. 装修</a></li>
 </ul>
 </div>
 </div>
 
-
-
-<div id="outline-container-orge784e9f" class="outline-2">
-<h2 id="orge784e9f"><span class="section-number-2">1</span> <a href="./math.html">数学</a></h2>
+<div id="outline-container-org8872438" class="outline-2">
+<h2 id="org8872438"><span class="section-number-2">1</span> <a href="./math.html">数学</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 汇总工作中需要用到数学知识。
 </p>
 </div>
 </div>
-<div id="outline-container-org10bf1cd" class="outline-2">
-<h2 id="org10bf1cd"><span class="section-number-2">2</span> <a href="./algorithm.html">算法</a></h2>
+<div id="outline-container-org12e6fd9" class="outline-2">
+<h2 id="org12e6fd9"><span class="section-number-2">2</span> <a href="./algorithm.html">算法</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 总结各种机器学习,数据挖掘等的理念、工具、算法等, 以及数字图像处理知识。
 </p>
 </div>
 </div>
-<div id="outline-container-orgb5b3f25" class="outline-2">
-<h2 id="orgb5b3f25"><span class="section-number-2">3</span> <a href="./protocol.html">协议</a></h2>
+<div id="outline-container-orgf2acd87" class="outline-2">
+<h2 id="orgf2acd87"><span class="section-number-2">3</span> <a href="./protocol.html">协议</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 总结工作中遇到的各种协议，包括大族协议，小族协议等。
 </p>
 </div>
 </div>
-<div id="outline-container-org6e5b915" class="outline-2">
-<h2 id="org6e5b915"><span class="section-number-2">4</span> <a href="./software.html">软件</a></h2>
+<div id="outline-container-org61c4b04" class="outline-2">
+<h2 id="org61c4b04"><span class="section-number-2">4</span> <a href="./software.html">软件</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 总结软件开发的一些理论，技巧，编程语言等。
 </p>
 </div>
 </div>
-<div id="outline-container-org6256cda" class="outline-2">
-<h2 id="org6256cda"><span class="section-number-2">5</span> <a href="./hardware.html">硬件</a></h2>
+<div id="outline-container-orgc4a2f87" class="outline-2">
+<h2 id="orgc4a2f87"><span class="section-number-2">5</span> <a href="./hardware.html">硬件</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 总结硬件中的数字电路、模拟电路、射频、器件、芯片内核等。
 </p>
 </div>
 </div>
-<div id="outline-container-org2a1b448" class="outline-2">
-<h2 id="org2a1b448"><span class="section-number-2">6</span> <a href="./tool.html">工具</a></h2>
+<div id="outline-container-org2e45eb9" class="outline-2">
+<h2 id="org2e45eb9"><span class="section-number-2">6</span> <a href="./tool.html">工具</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 总结工作中用到的工具，emacs、latex、软件工具等。
 </p>
 </div>
 </div>
-<div id="outline-container-org5c95283" class="outline-2">
-<h2 id="org5c95283"><span class="section-number-2">7</span> <a href="./signal.html">信号系统</a></h2>
+<div id="outline-container-org2dc8a7a" class="outline-2">
+<h2 id="org2dc8a7a"><span class="section-number-2">7</span> <a href="./signal.html">信号系统</a></h2>
 <div class="outline-text-2" id="text-7">
 <p>
 总结信号与系统的方方面面。
 </p>
 </div>
 </div>
-<div id="outline-container-org81ae0e3" class="outline-2">
-<h2 id="org81ae0e3"><span class="section-number-2">8</span> <a href="./os.html">操作系统</a></h2>
+<div id="outline-container-org133f909" class="outline-2">
+<h2 id="org133f909"><span class="section-number-2">8</span> <a href="./os.html">操作系统</a></h2>
 <div class="outline-text-2" id="text-8">
 <p>
 总结工作中用到的操作系统，Android、Linux、嵌入式操作系统等。
 </p>
 </div>
 </div>
-<div id="outline-container-org57d6fc3" class="outline-2">
-<h2 id="org57d6fc3"><span class="section-number-2">9</span> <a href="./communication.html">通信</a></h2>
+<div id="outline-container-orgec1b34b" class="outline-2">
+<h2 id="orgec1b34b"><span class="section-number-2">9</span> <a href="./communication.html">通信</a></h2>
 <div class="outline-text-2" id="text-9">
 <p>
 总结通信系统的方方面面，从基础到LTE。
 </p>
 </div>
 </div>
-<div id="outline-container-orge29b85c" class="outline-2">
-<h2 id="orge29b85c"><span class="section-number-2">10</span> <a href="./encyclopedia.html">百科知识</a></h2>
+<div id="outline-container-org108af46" class="outline-2">
+<h2 id="org108af46"><span class="section-number-2">10</span> <a href="./encyclopedia.html">百科知识</a></h2>
 <div class="outline-text-2" id="text-10">
 <p>
 总结工作中接触到的百科知识比如GPS等。
 </p>
 </div>
 </div>
-<div id="outline-container-org96f4fed" class="outline-2">
-<h2 id="org96f4fed"><span class="section-number-2">11</span> <a href="./language.html">外语</a></h2>
+<div id="outline-container-org0c79b39" class="outline-2">
+<h2 id="org0c79b39"><span class="section-number-2">11</span> <a href="./language.html">外语</a></h2>
 <div class="outline-text-2" id="text-11">
 <p>
 总结平时用到的英语知识、短语、翻译技巧等。 
 </p>
 </div>
 </div>
-<div id="outline-container-org78aff8f" class="outline-2">
-<h2 id="org78aff8f"><span class="section-number-2">12</span> <a href="./decoration.html">装修</a></h2>
+<div id="outline-container-orgada2220" class="outline-2">
+<h2 id="orgada2220"><span class="section-number-2">12</span> <a href="./decoration.html">装修</a></h2>
 <div class="outline-text-2" id="text-12">
 <p>
 介绍一些装修常识和问题点。
@@ -354,7 +353,8 @@ for the JavaScript code in this tag.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 比克曼</p>
-<p class="date">Created: 2019-01-06 周日 13:34</p>
+<p class="email">Email: <a href="mailto:bitman@163.com">bitman@163.com</a></p>
+<p class="date">Created: 2019-02-23 周六 22:06</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
