--- a/language.html
+++ b/language.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2019-01-01 周二 22:14 -->
+<!-- 2019-04-21 周日 00:24 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>外语学习</title>
@@ -235,14 +235,14 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org8a39a11">1. 短语</a></li>
-<li><a href="#orgeffdc1c">2. 缩写</a></li>
+<li><a href="#orga471bfd">1. 短语</a></li>
+<li><a href="#orgfe7034e">2. 缩写</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org8a39a11" class="outline-2">
-<h2 id="org8a39a11"><span class="section-number-2">1</span> 短语</h2>
+<div id="outline-container-orga471bfd" class="outline-2">
+<h2 id="orga471bfd"><span class="section-number-2">1</span> 短语</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li>up to a point:一定程度上,不完全如此,在一定程度上;</li>
@@ -1245,8 +1245,8 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-orgeffdc1c" class="outline-2">
-<h2 id="orgeffdc1c"><span class="section-number-2">2</span> 缩写</h2>
+<div id="outline-container-orgfe7034e" class="outline-2">
+<h2 id="orgfe7034e"><span class="section-number-2">2</span> 缩写</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li>IMU：inertial measurement units，惯性测量单元，常包含加速度和陀螺仪传感器；</li>
@@ -1422,7 +1422,7 @@ for the JavaScript code in this tag.
 <div id="postamble" class="status">
 <p class="author">Author: 比克曼</p>
 <p class="email">Email: <a href="mailto:bitman@163.com">bitman@163.com</a></p>
-<p class="date">Created: 2019-01-01 周二 22:14</p>
+<p class="date">Created: 2019-04-21 周日 00:24</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
