--- a/communication.html
+++ b/communication.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2019-01-01 周二 22:14 -->
+<!-- 2019-04-21 周日 00:24 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>通信</title>
@@ -235,21 +235,21 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgc5c8291">1. 概念</a></li>
-<li><a href="#org533fde0">2. 通信原理</a>
+<li><a href="#org656e39e">1. 概念</a></li>
+<li><a href="#org79fffab">2. 通信原理</a>
 <ul>
-<li><a href="#org7279068">2.1. 模拟信号数字化</a></li>
-<li><a href="#orgc6fa77a">2.2. 数字基带信号</a></li>
+<li><a href="#org353e51d">2.1. 模拟信号数字化</a></li>
+<li><a href="#orgae70366">2.2. 数字基带信号</a></li>
 </ul>
 </li>
-<li><a href="#org2febebf">3. LTE</a></li>
+<li><a href="#orgc2763c0">3. LTE</a></li>
 </ul>
 </div>
 </div>
 
 
-<div id="outline-container-orgc5c8291" class="outline-2">
-<h2 id="orgc5c8291"><span class="section-number-2">1</span> 概念</h2>
+<div id="outline-container-org656e39e" class="outline-2">
+<h2 id="org656e39e"><span class="section-number-2">1</span> 概念</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li>信源编解码：信源编码和解码时两个逆过程，信源编码有2个作用
@@ -268,12 +268,12 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-org533fde0" class="outline-2">
-<h2 id="org533fde0"><span class="section-number-2">2</span> 通信原理</h2>
+<div id="outline-container-org79fffab" class="outline-2">
+<h2 id="org79fffab"><span class="section-number-2">2</span> 通信原理</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-org7279068" class="outline-3">
-<h3 id="org7279068"><span class="section-number-3">2.1</span> 模拟信号数字化</h3>
+<div id="outline-container-org353e51d" class="outline-3">
+<h3 id="org353e51d"><span class="section-number-3">2.1</span> 模拟信号数字化</h3>
 <div class="outline-text-3" id="text-2-1">
 <p>
 模拟信号数字化，采用抽样定理，抽样出信号，在通过编码（比如格雷码）将抽样的
@@ -298,8 +298,8 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-orgc6fa77a" class="outline-3">
-<h3 id="orgc6fa77a"><span class="section-number-3">2.2</span> 数字基带信号</h3>
+<div id="outline-container-orgae70366" class="outline-3">
+<h3 id="orgae70366"><span class="section-number-3">2.2</span> 数字基带信号</h3>
 <div class="outline-text-3" id="text-2-2">
 <p>
 数字基带信号的特点是功率谱集中在零频率附近。数字基带信号通常是在电缆线路中
@@ -324,14 +324,14 @@ for the JavaScript code in this tag.
 </div>
 </div>
 </div>
-<div id="outline-container-org2febebf" class="outline-2">
-<h2 id="org2febebf"><span class="section-number-2">3</span> LTE</h2>
+<div id="outline-container-orgc2763c0" class="outline-2">
+<h2 id="orgc2763c0"><span class="section-number-2">3</span> LTE</h2>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 比克曼</p>
 <p class="email">Email: <a href="mailto:bitman@163.com">bitman@163.com</a></p>
-<p class="date">Created: 2019-01-01 周二 22:14</p>
+<p class="date">Created: 2019-04-21 周日 00:24</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
