--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2019-04-21 周日 00:24 -->
+<!-- 2019-05-07 周二 22:37 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>比克曼的知识管理</title>
@@ -250,6 +250,7 @@ for the JavaScript code in this tag.
 <li><a href="#org08f7e15">10. 百科知识</a></li>
 <li><a href="#org5760eeb">11. 外语</a></li>
 <li><a href="#org2f86c71">12. 装修</a></li>
+<li><a href="#org22335df">13. 附录</a></li>
 </ul>
 </div>
 </div>
@@ -350,11 +351,30 @@ for the JavaScript code in this tag.
 </p>
 </div>
 </div>
+<div id="outline-container-org22335df" class="outline-2">
+<h2 id="org22335df"><span class="section-number-2">13</span> 附录</h2>
+<div class="outline-text-2" id="text-13">
+<p>
+我的公钥指纹：
+</p>
+<pre class="example">
+pub   rsa2048 2019-05-07 [SC]
+      E622 558B A9B8 4ACE 5E05  66D1 6F44 A889 D571 A5AA
+</pre>
+
+<p>
+你可以使用如下命令获得我的公钥
+</p>
+<pre class="example">
+gpg --keyserver hkps://hkps.pool.sks-keyservers.net --search-keys bitman@163.com
+</pre>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 比克曼</p>
 <p class="email">Email: <a href="mailto:bitman@163.com">bitman@163.com</a></p>
-<p class="date">Created: 2019-04-21 周日 00:24</p>
+<p class="date">Created: 2019-05-07 周二 22:37</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
